fix: auth type
